2008-05-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* mount.cc (find_root_from_cygwin_dll): New function factored from
	from_fstab.  Avoid use of tls since it isn't necessarily initialized
	when cygwin1.dll is dynamically loaded.
	(mount_info::create_root_entry): Ditto.
	(mount_info::init): Calculate cygwin root once.  Use create_root_entry
	to record it.  Pass fstab location to from_fstab.
	(mount_info::from_fstab): Move root calculation stuff elsewhere, as per
	above.

	* shared_info.h (mount_info::from_fstab_line): Make private.
	(mount_info::fstab): Ditto.  Accommodate new arguments.

2008-05-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* mount.cc (mount_info::from_fstab): Use cygwin_hmodule rather than
	trying to find handle based on cygwin1.dll.

	* path.cc (symlink_info::check): Remove unused variable.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* shared.cc (open_shared): Fix comments.  Fix a condition which has
	been overlooked to revert to its old state in change from 2008-04-18.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Define eabuf and easize outside of
	loop.  Set to NULL on first STATUS_EAS_NOT_SUPPORTED.  Align comments.
	Fix formatting.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_disk_file::readdir): Eliminate
	compiler warning.

2008-05-23  Christopher Faylor  <me+cygwin@cgf.cx>

	* path.cc (symlink_info::check): Don't pass EaBuffer to NtCreateFile if
	it has indicated that it isn't appropriate.
	* ntdll.h (STATUS_EAS_NOT_SUPPORTED): Define.

	* winsup.h: Remove __builtin* defines.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (internal_getgroups): Fix thinko.  Only add enabled groups to
	the group list.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>

	* grp.cc (internal_getgroups): Don't add deny-only groups to the group
	list.

2008-05-22  Corinna Vinschen  <corinna@vinschen.de>
